31 May 2012: Wouter
	- Fix bug in processing tray icon results from daemon.
	- url can contain numerical IP address and port number, in http
	  implementation.

22 May 2012: Wouter
	- Fix windows upgrade to preserve config files and to preserve the
	  installed (or not-installed) startmenu links.
	- Fix to not mess up the config files on a reinstall on windows.

21 May 2012: Wouter
	- windows runs installer from userspace.
	- windows dnssectrigger depends on unbound for boot invocation,
	  this fixes an error where it cannot tell unbound what to do.
	- fix updater for double callback due to retry and double reply.
	- fix slash in downloaded file and executed file (windows).
	- linebuffer for dnssec-trigger-control stdout, for results printout.

18 May 2012: Wouter
	- improved printout of SSL_ERROR_SYSCALL errors.
	- do not print interface-unknown and conn-reset errors upon system
	  restart for windows, only printed on high verbosity.

2 April 2012: Wouter
	- Remove debug print from update code.
	- Add debug prints to update code.
	- Fix FIONBIO error on windows.

30 March 2012: Wouter
	- windows implementation for update dialog and selfupdate.
	- work on osx update dialog and selfupdate.
	- lint clean.

29 March 2012: Wouter
	- fix exit of panel and threads
	- fix read multiple persist actions in one SSL packet frame.
	- gtk gui to ask for install of new software.  No unix action exists.

26 March 2012: Wouter
	- lock unlock and delete at exit of panel is improved.

15 March 2012: Wouter
	- configure windows detects GetAdaptersAdresses (XP and later).
	- snapshot for test.
	- Fix compatibility with VirtualBox on Windows, that messes with the
	  network adapters.  Solution works on windows XP and later (detected
	  by configure).
	- Fix trayicon on windows high DPI settings to look better.
	- silence connect() http errors, unless verbosity 2.
	- stop other download if one succeeds (happy eyeballs) on selfupdate.

13 March 2012: Wouter
	- self update work.
